Attack headers are cleaner and padding for the entries are reduced.

--- a/templates/item/equipment-sheet.html
+++ b/templates/item/equipment-sheet.html
@@ -93,6 +93,7 @@
                     <td class="resource-label">Divisor</td>
                     <td class="resource-label">Reach</td>
                     <td class="resource-label">ST</td>
+                    <td class="resource-label"></td>
                 </tr>
                 {{#each data.melee as |melee id|}}
                 <tr class="equipment-entry">
