--- a/templates/item/trait-sheet.html
+++ b/templates/item/trait-sheet.html
@@ -81,6 +81,7 @@
                         <td class="resource-label">Divisor</td>
                         <td class="resource-label">Reach</td>
                         <td class="resource-label">ST</td>
+                        <td class="resource-label"></td>
                     </tr>
                     {{#each data.melee as |melee id|}}
                     <tr class="equipment-entry">
@@ -130,6 +131,7 @@
                         <td class="resource-label">Bulk</td>
                         <td class="resource-label">Rcl</td>
                         <td class="resource-label">ST</td>
+                        <td class="resource-label"></td>
                     </tr>
                     {{#each data.ranged as |ranged id|}}
                     <tr class="equipment-entry">
