Added template data for vision angles with fields for altering it. Tables present on the combat tab have been restyled and vision info resides there. Updated facing test which now correctly computes relative facing.

--- a/gurps4e.css
+++ b/gurps4e.css
@@ -296,10 +296,18 @@
 
 .encumbranceTable {
 	display: grid;
-	grid-template-columns: 2fr 2fr 2fr 2fr;
+	grid-template-columns: 2fr 6fr;
 	padding: 2px;
 	border: 1px dotted grey;
 	margin: 1px;
+}
+
+.combat-table {
+	margin-left: 5px;
+}
+
+.combat-table td {
+	padding: 2px;
 }
 
 #attribute-block {
