Tweaked styling of cost and weight

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -556,8 +556,8 @@
 						<td class="item-title" style="padding-right: 0.2em">TL</td>
 						<td class="item-title" style="padding-right: 0.2em">LC</td>
 						<td class="item-title" style="padding-right: 0.2em">Qty</td>
-						<td class="item-title">$</td>
-						<td class="item-title" style="padding-right: 0.2em">lbs</td>
+						<td class="item-title"  style="text-align: center;">$</td>
+						<td class="item-title" style="padding-right: 0.2em; text-align: center;">lbs</td>
 						<td class="item-title">Status</td>
 						<td class="item-controls"></td>
 					</tr>
@@ -581,8 +581,8 @@
 										<td style="width: 1em;"><span>{{item.data.tl}}</span></td>
 										<td style="width: 1em;"><span>{{item.data.lc}}</span></td>
 										<td style="width: 1.5em;"><span>{{item.data.quantity}}</span></td>
-										<td><span>{{item.data.ttlCost}}</span></td>
-										<td><span>{{item.data.ttlWeight}}</span></td>
+										<td style="text-align: center;"><span>{{item.data.ttlCost}}</span></td>
+										<td style="text-align: center;"><span>{{item.data.ttlWeight}}</span></td>
 										<td style="width: 62px;"><span>{{item.data.equipStatus}}</span></td>
 										<td class="item-controls" style="width: 30px;">
 											<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
@@ -600,8 +600,8 @@
 						<td><span></span></td>
 						<td><span></span></td>
 						<td><span class="bold">Totals:</span></td>
-						<td><span>{{actor.data.bio.carriedValue}}</span></td>
-						<td><span>{{actor.data.bio.carriedWeight}}</span></td>
+						<td style="text-align: center;"><span>{{actor.data.bio.carriedValue}}</span></td>
+						<td style="text-align: center;"><span>{{actor.data.bio.carriedWeight}}</span></td>
 						<td><span></span></td>
 						<td class="item-controls"></td>
 					</tr>
